[gd_scene load_steps=8 format=3 uid="uid://b4kqm7v2daaxy"]

[ext_resource type="Script" uid="uid://cq81btnh5ih8s" path="res://UI/GameOverScreen/game_over_screen.gd" id="1_go"]
[ext_resource type="Texture2D" uid="uid://bdylnvm06f5fm" path="res://Art/UI/RealUI/Panel.png" id="2_go"]
[ext_resource type="Texture2D" uid="uid://bki3p3jojmdp4" path="res://Art/UI/RealUI/Button.png" id="3_go"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_panel"]
texture = ExtResource("2_go")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0
modulate_color = Color(0.29634, 0.282073, 0.179352, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_button_normal"]
texture = ExtResource("3_go")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
modulate_color = Color(0.599913, 0.620291, 0.628985, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_button_pressed"]
texture = ExtResource("3_go")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
modulate_color = Color(0.466057, 0.466057, 0.466057, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_button_hover"]
texture = ExtResource("3_go")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
modulate_color = Color(0.757665, 0.791826, 0.80549, 1)

[node name="GameOverScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_go")

[node name="BackgroundDim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 340)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.2, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.85, 1)
theme_override_font_sizes/font_size = 24
text = "Your tower has fallen..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.8, 0.8, 0.75, 1)
theme_override_font_sizes/font_size = 20
text = "Gold Collected: 0
Waves Survived: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MainMenuButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxTexture_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxTexture_button_hover")
text = "Main Menu"

[node name="TryAgainButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxTexture_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxTexture_button_hover")
text = "Try Again"

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
